--- a/html_cena.html
+++ b/html_cena.html
@@ -23,8 +23,8 @@
             <h1>Vitalia</h1>
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="index.html">Acerca de</a>
-                <a href="index.html">Contacto</a>
+                <a href="html_acerca_de.html">Acerca de</a>
+                <a href="html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -38,14 +38,16 @@
                 <ul>
                     <li><img src="Imagenes_cena/Ensalada de Atún y Garbanzo.jpg" alt="Ensalada de Atún y Garbanzo"></li>
                     <li><img src="Imagenes_cena/Licuado de Mora Azul.webp" alt="Licuado de Mora Azul"></li>
-                    <li><img src="Imagenes_cena/Pan Tostado con Tahini y Verduras.jpg" alt="Pan Tostado con Tahini y Verduras"></li>
-                    <li><img src="Imagenes_cena/Sándwich de Huevo con Aguacate.jpg" alt="Sándwich de Huevo con Aguacate"></li>
+                    <li><img src="Imagenes_cena/Pan Tostado con Tahini y Verduras.jpg"
+                            alt="Pan Tostado con Tahini y Verduras"></li>
+                    <li><img src="Imagenes_cena/Sándwich de Huevo con Aguacate.jpg"
+                            alt="Sándwich de Huevo con Aguacate"></li>
 
                 </ul>
 
 
             </div>
-            
+
 
             <div class="recetas">
                 <div class="receta">
@@ -75,7 +77,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -93,7 +95,8 @@
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>Coloca todos los ingredientes en una licuadora y mezcla muy bien hasta obtener una consistencia suave.</li>
+                        <li>Coloca todos los ingredientes en una licuadora y mezcla muy bien hasta obtener una
+                            consistencia suave.</li>
 
                     </ol>
 
@@ -101,7 +104,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -128,7 +131,8 @@
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                        <li>En un tazón mezcla el tahini, el jugo de limón, sal y el ajo en polvo para hacer la crema.</li>
+                        <li>En un tazón mezcla el tahini, el jugo de limón, sal y el ajo en polvo para hacer la crema.
+                        </li>
                         <li>Esparce la crema sobre una rebanada de pan tostado y agrega las verduras encima.</li>
                         <li>Rocía con aceite de oliva.</li>
 
@@ -138,7 +142,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -156,7 +160,8 @@
                     <ol>
                         <h3>Modo de preparación:</h3>
                         <li>Hierve los huevos en agua durante 3 minutos y quita el cascarón.</li>
-                        <li>En un tazón machaca los huevos con el aguacate. Agrega el cilantro, la cebolla y sazona con sal y pimienta.</li>
+                        <li>En un tazón machaca los huevos con el aguacate. Agrega el cilantro, la cebolla y sazona con
+                            sal y pimienta.</li>
                         <li>Prepara el sándwich con el pan.</li>
                     </ol>
 
@@ -164,7 +169,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
 
 
@@ -174,7 +179,10 @@
 
                 <h3 id="Video"> A continuación un vídeo explicativo para la preparación de las recetas.</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/vkNnZA-BYLs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/vkNnZA-BYLs"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
 
@@ -200,41 +208,41 @@
                 ¡Escríbenos!
             </h2>
 
-            <form action="procesar.php" method="post">
+            <form id="formulario-sugerencias">
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre"><br>
+                <input type="text" id="nombre" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" required>
 
                 <label for="opinion">Opinión:</label>
-                <textarea id="opinion" name="opinion"></textarea><br>
+                <textarea id="opinion" required></textarea>
 
-                <input type="submit" value="Enviar">
+                <button type="submit">Enviar</button>
             </form>
             <script src="validacion_formulario.js"></script>
 
-            <h2>
-                ¡Evalúanos!
-
-            </h2>
-            <form>
+            <h2>¡Evalúanos!</h2>
+            <form id="formulario-evaluacion">
                 <label><input type="radio" name="satisfaccion" value="excelente"> Excelente página.</label><br>
                 <label><input type="radio" name="satisfaccion" value="regular"> Página Regular.</label><br>
                 <label><input type="radio" name="satisfaccion" value="malo"> Puede mejorar. </label>
+
+                <button type="submit">Enviar</button>
             </form>
+            <script src="validacion_formulario.js"></script>
 
         </aside>
 
 
 
         <footer class="footer">
-           
+
 
         </footer>
 
     </div>
-   
+
 
 
 </body>
