--- a/html_desayuno.html
+++ b/html_desayuno.html
@@ -23,8 +23,8 @@
             <h1>Vitalia</h1>
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="index.html">Acerca de</a>
-                <a href="index.html">Contacto</a>
+                <a href="html_acerca_de.html">Acerca de</a>
+                <a href="html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -45,7 +45,7 @@
 
 
             </div>
-            
+
 
             <div class="recetas">
                 <div class="receta">
@@ -79,7 +79,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -107,7 +107,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -137,7 +137,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -165,7 +165,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
 
 
@@ -175,7 +175,10 @@
 
                 <h3 id="Video"> A continuación un vídeo explicativo para la preparación de las recetas.</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Yw97flmRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/d-Yw97flmRA"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
 
@@ -201,29 +204,29 @@
                 ¡Escríbenos!
             </h2>
 
-            <form action="procesar.php" method="post">
+            <form id="formulario-sugerencias">
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre"><br>
+                <input type="text" id="nombre" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" required>
 
                 <label for="opinion">Opinión:</label>
-                <textarea id="opinion" name="opinion"></textarea><br>
+                <textarea id="opinion" required></textarea>
 
-                <input type="submit" value="Enviar">
+                <button type="submit">Enviar</button>
             </form>
             <script src="validacion_formulario.js"></script>
 
-            <h2>
-                ¡Evalúanos!
-
-            </h2>
-            <form>
+            <h2>¡Evalúanos!</h2>
+            <form id="formulario-evaluacion">
                 <label><input type="radio" name="satisfaccion" value="excelente"> Excelente página.</label><br>
                 <label><input type="radio" name="satisfaccion" value="regular"> Página Regular.</label><br>
                 <label><input type="radio" name="satisfaccion" value="malo"> Puede mejorar. </label>
+
+                <button type="submit">Enviar</button>
             </form>
+            <script src="validacion_formulario.js"></script>
 
         </aside>
 
@@ -234,7 +237,7 @@
         </footer>
 
     </div>
-   
+
 
 
 </body>
