--- a/html_merienda.html
+++ b/html_merienda.html
@@ -23,8 +23,8 @@
             <h1>Vitalia</h1>
             <nav>
                 <a href="index.html">Inicio</a>
-                <a href="index.html">Acerca de</a>
-                <a href="index.html">Contacto</a>
+                <a href="html_acerca_de.html">Acerca de</a>
+                <a href="html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -45,7 +45,7 @@
 
 
             </div>
-            
+
 
             <div class="recetas">
                 <div class="receta">
@@ -53,26 +53,27 @@
                     <h3 id="Menta con Limón.">Menta con Limón.</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                    <li>2 bolsas de té de menta</li>
-                    <li>1 cucharadita de miel de abeja</li>
-                    <li>Rodajas de limón</li>
-                    <li>Menta fresca</li>
-                    <li>Hielo</li>
-                    <li>Agua</li>    
+                        <li>2 bolsas de té de menta</li>
+                        <li>1 cucharadita de miel de abeja</li>
+                        <li>Rodajas de limón</li>
+                        <li>Menta fresca</li>
+                        <li>Hielo</li>
+                        <li>Agua</li>
                     </ul>
 
                     <ol>
                         <h3>Modo de preparación:</h3>
                         <li>En agua caliente sumerge dos bolsas de té de menta y deja reposar por 5 minutos.</li>
                         <li>Agrega la miel de abeja y revuelve muy bien.</li>
-                        <li>En un vaso de vidrio con hielo agrega el jugo de limón, el tea de menta, las rodajas de limon y la menta fresca.</li>
+                        <li>En un vaso de vidrio con hielo agrega el jugo de limón, el tea de menta, las rodajas de
+                            limon y la menta fresca.</li>
                     </ol>
 
 
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -90,16 +91,17 @@
 
                     <ol>
                         <h3>Modo de preparación:</h3>
- <li>En agua caliente sumerge el jengibre fresco y deja reposar por 10 minutos.</li>
- <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre, la fresa y endulza con stevia.</li>
-                    
+                        <li>En agua caliente sumerge el jengibre fresco y deja reposar por 10 minutos.</li>
+                        <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre, la fresa y
+                            endulza con stevia.</li>
+
                     </ol>
 
 
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
@@ -118,8 +120,9 @@
 
                     <ol>
                         <h3>Modo de preparación:</h3>
-                       <li>En agua caliente sumerge el jengibre fresco y la cúrcuma, deja reposar por 10 minutos.</li>
-                       <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre y cúrcuma y espolvorea cayenne.</li>
+                        <li>En agua caliente sumerge el jengibre fresco y la cúrcuma, deja reposar por 10 minutos.</li>
+                        <li>En un vaso de vidrio con hielo agrega el jugo de limón, el agua con jengibre y cúrcuma y
+                            espolvorea cayenne.</li>
 
                     </ol>
 
@@ -127,20 +130,20 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
                 <div class="receta">
                     <!-- UNA RECETA!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
                     <h3 id="Té verde con Menta">Té verde con Menta</h3>
                     <ul>
                         <h3>Ingredientes:</h3>
-                         <li>1 bolsa de té verde</li>
-                         <li>1 bolsa de té de menta</li>
-                         <li>1 cucharadita de miel de abeja</li>
-                         <li>1/4 taza de piña fresca picada</li>
-                         <li>Menta fresca</li>
-                         <li>Agua</li>
-                         <li>Hielo</li>
+                        <li>1 bolsa de té verde</li>
+                        <li>1 bolsa de té de menta</li>
+                        <li>1 cucharadita de miel de abeja</li>
+                        <li>1/4 taza de piña fresca picada</li>
+                        <li>Menta fresca</li>
+                        <li>Agua</li>
+                        <li>Hielo</li>
 
                     </ul>
 
@@ -155,7 +158,7 @@
 
                 </div>
                 <br>
-                    <a href="#indice_de_recetas">Volver al Inicio.</a><br>
+                <a href="#indice_de_recetas">Volver al Inicio.</a><br>
 
 
 
@@ -165,7 +168,10 @@
 
                 <h3 id="Video"> A continuación un vídeo explicativo para la preparación de las recetas.</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCVTcAKvYlU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fCVTcAKvYlU"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
 
 
@@ -191,29 +197,29 @@
                 ¡Escríbenos!
             </h2>
 
-            <form action="procesar.php" method="post">
+            <form id="formulario-sugerencias">
                 <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre"><br>
+                <input type="text" id="nombre" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email"><br>
+                <input type="email" id="email" required>
 
                 <label for="opinion">Opinión:</label>
-                <textarea id="opinion" name="opinion"></textarea><br>
+                <textarea id="opinion" required></textarea>
 
-                <input type="submit" value="Enviar">
+                <button type="submit">Enviar</button>
             </form>
             <script src="validacion_formulario.js"></script>
 
-            <h2>
-                ¡Evalúanos!
-
-            </h2>
-            <form>
+            <h2>¡Evalúanos!</h2>
+            <form id="formulario-evaluacion">
                 <label><input type="radio" name="satisfaccion" value="excelente"> Excelente página.</label><br>
                 <label><input type="radio" name="satisfaccion" value="regular"> Página Regular.</label><br>
                 <label><input type="radio" name="satisfaccion" value="malo"> Puede mejorar. </label>
+
+                <button type="submit">Enviar</button>
             </form>
+            <script src="validacion_formulario.js"></script>
 
         </aside>
 
@@ -224,7 +230,7 @@
         </footer>
 
     </div>
-   
+
 
 
 </body>
