--- a/html/html_acerca_de.html
+++ b/html/html_acerca_de.html
@@ -3,15 +3,15 @@
 
 <head>
     <title>Acerca de</title>
-<link rel="stylesheet" href="Css_acerca_de.css">    
+<link rel="stylesheet" href="../Css/Css_acerca_de.css">    
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="../html/index.html">Inicio</a>
         
-            <a href="html_contacto.html">Contacto</a>
+            <a href="../html/html_contacto.html">Contacto</a>
         </nav>
         <h1>Nuestra Historia</h1>
     </header>
