--- a/html/html_almuerzo.html
+++ b/html/html_almuerzo.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Almuerzos saludables.</title>
-    <link rel="stylesheet" href="Css/Css_almuerzo.css">
-    <link rel="stylesheet" href="Css/CssGrid.css">
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="../css/css_almuerzo.css">
+    <link rel="stylesheet" href="../css/css_grid.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -17,15 +17,15 @@
 
 
 <body>
-    <script src="validacion_formulario.js"></script>
+    <script src="../java_script/validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="html_acerca_de.html">Acerca de</a>
-                <a href="html_contacto.html">Contacto</a>
+                <a href="../html/index.html">Inicio</a>
+                <a href="../html/html_acerca_de.html">Acerca de</a>
+                <a href="../html/html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -35,10 +35,10 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_almuerzo/slider1.jpg" alt="sandwich_de_pollo"></li>
-                    <li><img src="Imagenes_almuerzo/slider2.jpg" alt="ensalada_de_lentejas"></li>
-                    <li><img src="Imagenes_almuerzo/slider3.jpg" alt="Tacos de Lechuga con Salmón"></li>
-                    <li><img src="Imagenes_almuerzo/slider4.jpg" alt="Ensalada de Taco"></li>
+                    <li><img src="../imagenes/imagenes_almuerzo/slider1.jpg" alt="sandwich_de_pollo"></li>
+                    <li><img src="../imagenes/imagenes_almuerzo/slider2.jpg" alt="ensalada_de_lentejas"></li>
+                    <li><img src="../imagenes/imagenes_almuerzo/slider3.jpg" alt="Tacos de Lechuga con Salmón"></li>
+                    <li><img src="../imagenes/imagenes_almuerzo/slider4.jpg" alt="Ensalada de Taco"></li>
 
                 </ul>
 
@@ -262,7 +262,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
             <h2>¡Evalúanos!</h2>
             <form id="formulario-evaluacion">
@@ -272,7 +272,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
         </aside>
 
