--- a/html/html_cena.html
+++ b/html/html_cena.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cenas saludables.</title>
-    <link rel="stylesheet" href="Css/CssGrid.css">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/Css_cena.css">
+    <link rel="stylesheet" href="../css/css_grid.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/css_cena.css">
 </head>
 
 
@@ -16,15 +16,15 @@
 
 
 <body>
-    <script src="validacion_formulario.js"></script>
+    <script src="../java_script/validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="html_acerca_de.html">Acerca de</a>
-                <a href="html_contacto.html">Contacto</a>
+                <a href="../html/index.html">Inicio</a>
+                <a href="../html/html_acerca_de.html">Acerca de</a>
+                <a href="../html/html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -36,11 +36,11 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_cena/Ensalada de Atún y Garbanzo.jpg" alt="Ensalada de Atún y Garbanzo"></li>
-                    <li><img src="Imagenes_cena/Licuado de Mora Azul.webp" alt="Licuado de Mora Azul"></li>
-                    <li><img src="Imagenes_cena/Pan Tostado con Tahini y Verduras.jpg"
+                    <li><img src="../imagenes/imagenes_cena/Ensalada de Atún y Garbanzo.jpg" alt="Ensalada de Atún y Garbanzo"></li>
+                    <li><img src="../imagenes/imagenes_cena/Licuado de Mora Azul.webp" alt="Licuado de Mora Azul"></li>
+                    <li><img src="../imagenes/imagenes_cena/Pan Tostado con Tahini y Verduras.jpg"
                             alt="Pan Tostado con Tahini y Verduras"></li>
-                    <li><img src="Imagenes_cena/Sándwich de Huevo con Aguacate.jpg"
+                    <li><img src="../imagenes/imagenes_cena/Sándwich de Huevo con Aguacate.jpg"
                             alt="Sándwich de Huevo con Aguacate"></li>
 
                 </ul>
@@ -220,7 +220,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
             <h2>¡Evalúanos!</h2>
             <form id="formulario-evaluacion">
@@ -230,7 +230,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
         </aside>
 
