--- a/html/html_contacto.html
+++ b/html/html_contacto.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="css_contacto.css">
+    <link rel="stylesheet" href="../Css/css_contacto.css">
 </head>
 
 <body>
     <header>
         <h1>Vitalia</h1>
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="html_acerca_de.html">Acerca de</a>
+            <a href="../html/index.html">Inicio</a>
+            <a href="../html/html_acerca_de.html">Acerca de</a>
         </nav>
     </header>
     <h2>Contáctanos</h2>
@@ -42,15 +42,14 @@
           <button type="submit">Enviar opinión</button>
         </div>
       </form>
-    <script src="validacion_formulario.js"></script>
-    <script src="contacto.js"></script>
+    <script src="../java_script/validacion_formulario.js"></script>
+    <script src="../java_script/contacto.js"></script>
 
     <h3>Correo electrónico:</h3>
     <p>Si prefieres enviarnos un correo electrónico, puedes hacerlo a la siguiente
         dirección:vitalia.contact.us@gmail.com . Nos comprometemos a responder en un plazo de 24 horas.</p>
 
-    <p>También puedes encontrarnos en nuestras redes sociales. Síguenos para estar al tanto de las últimas novedades y
-        actualizaciones de nuestro proyecto.</p>
+    
     <h3>Redes sociales:</h3>
     <p>También puedes encontrarnos en nuestras redes sociales. Síguenos para estar al tanto de las últimas novedades y
         actualizaciones de nuestro proyecto.</p>
