--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitalia</title>
-    <link rel="stylesheet" href="style_index.css">
+    <link rel="stylesheet" href="../css/style_index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
@@ -17,8 +17,8 @@
             <h1>Vitalia</h1>
             <nav>
 
-                <a href="html_acerca_de.html">Acerca de</a>
-                <a href="html_contacto.html">Contacto</a>
+                <a href="../html/html_acerca_de.html">Acerca de</a>
+                <a href="../html/html_contacto.html">Contacto</a>
             </nav>
         </header>
         <!-- Contenido -->
@@ -34,8 +34,8 @@
                 <div class="row">
                     <div class="col">
                         <!-- aca va el link de desayuno -->
-                        <a href="html_desayuno.html">
-                            <img src="imagenes/Desayuno.jpg" alt="Desayuno">
+                        <a href="../html/html_desayuno.html">
+                            <img src="../imagenes/imagenes_index/Desayuno.jpg" alt="Desayuno">
                             <div class="overlay">
                                 <span>Desayuno</span>
                             </div>
@@ -43,8 +43,8 @@
                     </div>
                     <div class="col">
                         <!-- aca  va el link de almuerzo -->
-                        <a href="html_almuerzo.html">
-                            <img src="imagenes/Almuerzo.jpg" alt="Almuerzo">
+                        <a href="../html/html_almuerzo.html">
+                            <img src="../imagenes/imagenes_index/Almuerzo.jpg" alt="Almuerzo">
                             <div class="overlay">
                                 <span>Almuerzo</span>
                             </div>
@@ -54,8 +54,8 @@
                 <div class="row">
                     <div class="col">
                         <!-- aca va el link de merienda-->
-                        <a href="html_merienda.html">
-                            <img src="imagenes/Merienda.jpg" alt="Merienda">
+                        <a href="../html/html_merienda.html">
+                            <img src="../imagenes/imagenes_index/Merienda.jpg" alt="Merienda">
                             <div class="overlay">
                                 <span>Merienda</span>
                             </div>
@@ -63,8 +63,8 @@
                     </div>
                     <div class="col">
                         <!-- aca va el link de cena -->
-                        <a href="html_cena.html">
-                            <img src="imagenes/Cena.jpg" alt="Cena">
+                        <a href="../html/html_cena.html">
+                            <img src="../imagenes/imagenes_index/Cena.jpg" alt="Cena">
                             <div class="overlay">
                                 <span>Cena</span>
                             </div>
