--- a/html/html_desayuno.html
+++ b/html/html_desayuno.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desayunos saludables.</title>
-    <link rel="stylesheet" href="Css/CssGrid.css">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/Css_desayuno.css">
+    <link rel="stylesheet" href="../css/css_grid.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/css_desayuno.css">
 </head>
 
 
@@ -16,15 +16,15 @@
 
 
 <body>
-    <script src="validacion_formulario.js"></script>
+    <script src="../java_script/validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="html_acerca_de.html">Acerca de</a>
-                <a href="html_contacto.html">Contacto</a>
+                <a href="../html/index.html">Inicio</a>
+                <a href="../html/html_acerca_de.html">Acerca de</a>
+                <a href="../html/html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -36,10 +36,10 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_desayuno/slider1.jpg" alt="Sandwich de Huevo"></li>
-                    <li><img src="Imagenes_desayuno/slider2.jpg" alt="Wrap Dulce"></li>
-                    <li><img src="Imagenes_desayuno/slider3.jpg" alt="Pancakes de Plátano"></li>
-                    <li><img src="Imagenes_desayuno/slider4.jpg" alt="Pudín de Chía"></li>
+                    <li><img src="../imagenes/imagenes_desayuno/slider1.jpg" alt="Sandwich de Huevo"></li>
+                    <li><img src="../imagenes/imagenes_desayuno/slider2.jpg" alt="Wrap Dulce"></li>
+                    <li><img src="../imagenes/imagenes_desayuno/slider3.jpg" alt="Pancakes de Plátano"></li>
+                    <li><img src="../imagenes/imagenes_desayuno/slider4.jpg" alt="Pudín de Chía"></li>
 
                 </ul>
 
@@ -216,7 +216,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
             <h2>¡Evalúanos!</h2>
             <form id="formulario-evaluacion">
@@ -226,7 +226,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
         </aside>
 
