--- a/html/html_merienda.html
+++ b/html/html_merienda.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meriendas saludables.</title>
-    <link rel="stylesheet" href="Css/CssGrid.css">
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="stylesheet" href="Css/Css_merienda.css">
+    <link rel="stylesheet" href="../css/css_grid.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/css_merienda.css">
 </head>
 
 
@@ -16,15 +16,15 @@
 
 
 <body>
-    <script src="validacion_formulario.js"></script>
+    <script src="../java_script/validacion_formulario.js"></script>
     <div class="container">
 
         <header class="Header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="index.html">Inicio</a>
-                <a href="html_acerca_de.html">Acerca de</a>
-                <a href="html_contacto.html">Contacto</a>
+                <a href="../html/index.html">Inicio</a>
+                <a href="../html/html_acerca_de.html">Acerca de</a>
+                <a href="../html/html_contacto.html">Contacto</a>
             </nav>
         </header>
 
@@ -36,10 +36,10 @@
             <div class="carousel">
 
                 <ul>
-                    <li><img src="Imagenes_merienda/limon.jpg" alt="Menta con Limón"></li>
-                    <li><img src="Imagenes_merienda/fresa.jpg" alt="Jengibre con Fresa"></li>
-                    <li><img src="Imagenes_merienda/curcuma.jpg" alt="Cúrcuma con Jengibre"></li>
-                    <li><img src="Imagenes_merienda/verde.jpg" alt="Té verde con Menta"></li>
+                    <li><img src="../imagenes/imagenes_merienda/limon.jpg" alt="Menta con Limón"></li>
+                    <li><img src="../imagenes/imagenes_merienda/fresa.jpg" alt="Jengibre con Fresa"></li>
+                    <li><img src="../imagenes/imagenes_merienda/curcuma.jpg" alt="Cúrcuma con Jengibre"></li>
+                    <li><img src="../imagenes/imagenes_merienda/verde.jpg" alt="Té verde con Menta"></li>
 
                 </ul>
 
@@ -209,7 +209,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
             <h2>¡Evalúanos!</h2>
             <form id="formulario-evaluacion">
@@ -219,7 +219,7 @@
 
                 <button type="submit">Enviar</button>
             </form>
-            <script src="validacion_formulario.js"></script>
+            <script src="../java_script/validacion_formulario.js"></script>
 
         </aside>
 
