--- a/html/html_acerca_de.html
+++ b/html/html_acerca_de.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <a href="../html/index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
         
             <a href="../html/html_contacto.html">Contacto</a>
         </nav>
