--- a/html/html_contacto.html
+++ b/html/html_contacto.html
@@ -12,7 +12,7 @@
     <header>
         <h1>Vitalia</h1>
         <nav>
-            <a href="../html/index.html">Inicio</a>
+          <a href="../index.html">Inicio</a>
             <a href="../html/html_acerca_de.html">Acerca de</a>
         </nav>
     </header>
