--- a/html/html_merienda.html
+++ b/html/html_merienda.html
@@ -22,7 +22,7 @@
         <header class="Header">
             <h1>Vitalia</h1>
             <nav>
-                <a href="../html/index.html">Inicio</a>
+                <a href="../index.html">Inicio</a>
                 <a href="../html/html_acerca_de.html">Acerca de</a>
                 <a href="../html/html_contacto.html">Contacto</a>
             </nav>
