--- a/html/html_desayuno.html
+++ b/html/html_desayuno.html
@@ -201,18 +201,19 @@
             <a href="#Video"> Video explicativo.</a> <br>
 
             <h2>
+                Nos interesan tus ideas.
                 ¡Escríbenos!
             </h2>
 
-            <form id="formulario-sugerencias">
+            <form id="formulario_receta_desayuno" name="recetas" method="POST" netlify>
                 <label for="nombre">Nombre:</label>
                 <input type="text" id="nombre" required>
 
                 <label for="email">Email:</label>
                 <input type="email" id="email" required>
 
-                <label for="opinion">Opinión:</label>
-                <textarea id="opinion" required></textarea>
+                <label for="receta_usuario_desayuno">Receta:</label>
+                <textarea id="receta_usuario_desayuno" required></textarea>
 
                 <button type="submit">Enviar</button>
             </form>
